src/tests/cases/snapshots/excise__tests__cases__ui__delete_file-7.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[6]"
---
 Total: 8.0K (3 files), freed: 4.0K | /tmp/excise_tests/delete_file                                                                                                                           
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                           file3                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                         4.0K (50%)                                                                                         │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                   ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                           Are you sure you want to quit?                                                            │                  │
├───────────────────│                                                                                                                                                     │──────────────────┤
│                   │                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                        (y/n)                                                                        │                  │
│                   │                                                                                                                                                     │                  │
│                   └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                  │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                subfolder1/ (+1 descendants)                                                                                │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                         4.0K (50%)                                                                                         │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit
