src/tests/cases/snapshots/excise__tests__cases__ui__delete_file.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_file  ◆ COMPLETE                                                                                                                                            
 allocated ##.#K   reclaim ##.#K   apparent 12.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────┤│Select an entry for identity,     │
││                                                                                                    │                                                  ││bounds, state, and actions.       │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                               file2                                                │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                             4.0K (33%)                                             │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │           subfolder1/ (+1 descendants)           ││                                  │
││                                                                                                    │                                                  ││                                  │
│├────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                  ││                                  │
││                                                                                                    │                    4.0K (33%)                    ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                               file3                                                │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                             4.0K (33%)                                             │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
└┴────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
